navbar menu spacing fixes

--- a/cookiecutter_mbam/assets/scss/style.scss
+++ b/cookiecutter_mbam/assets/scss/style.scss
@@ -26,7 +26,23 @@ header[role="nav-menu"] {
 	  	padding: 10px 15px;
 	  }
 	}
+}
 
+
+.navbar-menu {
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+	.nav-item {
+	  	float: left;
+	  	a {
+	  		display: block;
+			color: white;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+	  	}
+	}
 }
 
 main[role="main"] {
